--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js",
+        "startapp": "nodemon app/app.js",
+        "startapi": "nodemon api/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -19,13 +20,17 @@
     "homepage": "https://github.com/julianmedwards/pets-and-owners#readme",
     "dependencies": {
         "body-parser": "^1.20.2",
+        "cross-env": "^7.0.3",
         "express": "^4.18.2",
         "morgan": "^1.10.0",
         "mysql2": "^3.2.0",
+        "pug": "^3.0.2",
         "sequelize": "^6.30.0",
         "sequelize-cli": "^6.6.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.22"
+        "@prettier/plugin-pug": "^2.4.2",
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.7"
     }
 }
